--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "popper.js": "^1.15.0",
+    "mint-ui": "^2.2.13",
     "vue": "^2.6.10",
-    "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
-    "bootstrap": "^4.0.0",
-    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
