--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "html-webpack-plugin": "^3.2.0",
     "snabbdom": "^0.7.3",
     "style-loader": "^0.23.1",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "@babel/runtime": "^7.5.4"
+    "@babel/runtime": "^7.5.4",
+    "vue": "^2.6.10"
   }
 }
