--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "javascript",
+  "name": "es6",
   "version": "1.0.0",
-  "description": "",
+  "description": "- webpack",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,28 +18,18 @@
     "url": "https://github.com/hangfengnice/ES6/issues"
   },
   "homepage": "https://github.com/hangfengnice/ES6#readme",
+  "dependencies": {
+    "lodash": "^4.17.14",
+    "moment": "^2.24.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.5.0",
-    "@babel/preset-env": "^7.5.4",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "snabbdom": "^0.7.3",
-    "style-loader": "^0.23.1",
-    "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.35.3",
+    "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "@babel/runtime": "^7.5.4",
-    "vue": "^2.6.10"
   }
 }
